--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.zht.ztoolkit"
     android:versionCode="1"
     android:versionName="1.0" >
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="12"
         android:targetSdkVersion="17" />
 
     <application
@@ -27,7 +28,14 @@
             android:label="@string/simple_listview" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.zht.ztoolkit.asyncimageloader.AsyncImageList"
+            android:label="@string/async_imageloader" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
