--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,9 +5,11 @@
     android:versionName="1.0" >
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <uses-sdk
-        android:minSdkVersion="12"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <application
@@ -39,6 +41,26 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.zht.ztoolkit.jsonparser.JsonParserActivity"
+            android:label="@string/json_parser" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.zht.ztoolkit.fragment.FragmentPagerActivity"
+            android:label="@string/fragment_pager">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.zht.ztoolkit.fragment.FragmentTouchActivity"
+            android:label="@string/fragment_touch">
         </activity>
     </application>
 
